# sprite-generator

./: README.md  app.py  pyproject.toml
sprite_generator/: __init__.py  __main__.py  cli.py  sprite_gen.py
